--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
+    "fmt": "prettier . --write"
   },
-  "keywords": ["animation", "scroll", "ui"],
+  "keywords": [
+    "animation",
+    "scroll",
+    "ui"
+  ],
   "author": "Nils Martel (nilsmartel@yahoo.de)",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   }
 }
