--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "yuianimations",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "intuitively create interactive UI Animations with respect to content and scrolling",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
+    "publish": "npm install && npm rum build && npm publish",
     "fmt": "prettier . --write"
   },
   "keywords": [
